# xcompression

./: .gitignore  CMakeLists.txt  README.md
documentation/: documentation.md
source/: xcompression.cpp  xcompression.h
source/unit-test/: xcompression_unittest.h
